Uses Gradle daemon to assign memory args
Instead of telling developers to set GRADLE_OPTS, this uses the Gradle
daemon to implicitly provide mem args. This also solves the problem
where Travis builds timeout on PermGen on JDK 7.